--- a/rubber-ducky/package.json
+++ b/rubber-ducky/package.json
@@ -20,6 +20,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.62.0",
+    "react-media-recorder": "^1.7.2",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.5"
   },
