--- a/rubber-ducky/package.json
+++ b/rubber-ducky/package.json
@@ -9,19 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/genai": "^1.17.0",
     "@hookform/resolvers": "^5.2.1",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.542.0",
     "next": "15.2.4",
     "react": "^19.0.0",
+    "react-day-picker": "^9.9.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.62.0",
     "react-media-recorder": "^1.7.2",
+    "socket.io": "^4.8.1",
     "tailwind-merge": "^3.3.1",
+    "ws": "^8.18.3",
     "zod": "^4.1.5"
   },
   "devDependencies": {
